fix bug with text in banner which overflow in small screens

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -28,13 +28,13 @@
 }
 
 @media only screen and (max-width: 700px) {
-  .rem-font {
+  .fluid-font-size {
     font-size: 0.6rem;
   }
 }
 
 @media only screen and (max-width: 500px) {
-  .rem-font {
+  .fluid-font-size {
     font-size: 0.4rem;
   }
 }
